# haxagon

./: .gitignore  Cargo.toml  Makefile  README.md
assets/shaders/: pattern_beam.frag
assets/sounds/: haxagon.flp  title.flp
releases/web/: .gitignore  Makefile  game.wasm  index.html  wasmnastics.js
releases/web/assets/shaders/: noise.frag
releases/web/assets/sounds/: ending.flp  not_a_fez_ripoff.flp
src/: boilerplates.rs  controls.rs  main.rs  model.rs
src/assets/: mod.rs
src/modes/: logo.rs  mod.rs  splash.rs  title.rs
src/modes/logo/: mod.rs
src/modes/playing/: denoument.rs  draw.rs  mod.rs
src/modes/playing/denoument/: mod.rs
src/modes/title/: credits.rs  mod.rs  play_settings.rs  text_displayer.rs
src/utils/: button.rs  mod.rs  profile.rs
src/utils/text/: billboard.rs  mod.rs
