[package]
name = "haxagon"
version = "0.1.0"
authors = ["gamma-delta <29877714+gamma-delta@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yay i fixed a bug! so i have to use the master branch
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
cogs-gamedev = "*"
quad-wasmnastics = "*"

enum-map = "1.0.0"
once_cell = "1.7.2"
crossbeam = { version = "0.8.0", optional = true }
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }

rand = { version = "0.8.3" }
quad-rand = { version = "0.2.1", features = ["rand"] }
getrandom = { version = "0.2.2", features = ["custom"] }
anyhow = "1.0.40"
regex = "1.5.4"
hex2d = "1.1.0"
ahash = "0.7.6"
itertools = "0.10.1"

[features]
default = ["thread_loop"]

thread_loop = ["crossbeam"]

[profile.dev.package.'*']
opt-level = 3

[profile.release]
debug = 2

[package.metadata.android]
assets = "assets/"
res = "android_res"
icon = "@mipmap/ic_launcher"

label = "Haxagon"

opengles_version_major = 3
opengles_version_minor = 1

[package.metadata.android.application_attributes]
"android:isGame" = "true"
